# cpp-ethereum

libdevcrypto/: CMakeLists.txt  CryptoPP.h
libethereum/: Executive.cpp
scripts/: build.sh  install_deps.sh
